[gd_scene load_steps=5 format=3 uid="uid://cm4u7at475mjr"]

[ext_resource type="PackedScene" uid="uid://6fekoamvdemc" path="res://Scenes/UI/volume_up_button.tscn" id="1_rv8n2"]
[ext_resource type="Script" uid="uid://cc7ed362s5kki" path="res://Scenes/UI/volume_group.gd" id="1_tym0c"]
[ext_resource type="PackedScene" uid="uid://cmukmmoumunts" path="res://Scenes/UI/volume_down_button.tscn" id="2_tym0c"]
[ext_resource type="Texture2D" uid="uid://clkntjue27jpl" path="res://Scenes/UI/Assets/volume.png" id="3_w3fb6"]

[node name="VolumeGroup" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 115.0
offset_bottom = 22.0
script = ExtResource("1_tym0c")

[node name="UpButton" parent="." instance=ExtResource("1_rv8n2")]
layout_mode = 0
offset_left = 95.0
offset_top = 1.0
offset_right = 115.0
offset_bottom = 21.0

[node name="ValueBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 23.0
offset_right = 92.0
offset_bottom = 22.0
max_value = 1.0
step = 0.1
value = 1.0
texture_progress = ExtResource("3_w3fb6")

[node name="DownButton" parent="." instance=ExtResource("2_tym0c")]
layout_mode = 0
offset_top = 1.0
offset_bottom = 21.0

[connection signal="pressed" from="UpButton" to="." method="_on_volume_up_button_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_volume_down_button_pressed"]
